--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.15",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.4"
   },
