--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
+    "lodash": "^4.17.21",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
